@@ -24,8 +24,8 @@ gmpc_SOURCES=\
 	config1.c
 
 #INCLUDES= @gmpc_CFLAGS@ -DPIXMAP_PATH=\""$(datadir)/gmpc/"\" -Wall -DGLADE_PATH=\""$(datadir)/gmpc/"\" -DDEBUG  
-INCLUDES= @gmpc_CFLAGS@ -Wall   
-LIBS = @gmpc_LIBS@ @LIBS@  
+INCLUDES= @gmpc_CFLAGS@ $(gmpc_gvfs_CFLAGS) -Wall   
+LIBS = @gmpc_LIBS@ @LIBS@ $(gmpc_gvfs_LIBS) 
 
 
 EXTRA_DIST = 	playlist3.h\
