@@ -1,4 +1,4 @@
-#include "../config.h"
+#include "config.h"
 
 #ifdef ENABLE_NLS
 #include <libintl.h>
