@@ -1,3 +1,4 @@
+#ifdef ENABLE_GNOME_VFS
 #include <libgnomevfs/gnome-vfs.h>
 
 typedef struct _dl_info
@@ -16,3 +17,4 @@ void get_file(dl_info *di);
 void load_genres(gchar *buffer);
 void load_streams(gchar *buffer);
 void start_transfer(gchar *link, void *(*function)(gchar *buffer, gpointer data),gpointer data,GtkWidget *parent_window);
+#endif
